2016-10-26 Franz Holzinger <franz@ttproducts.de>
	* remove the parameter handleLib from the PaymentApi because it must always be set to transactor
	* new feature: determine the payment costs. An addon to this extension can add the payment costs to the handling costs.

2016-06-13 Franz Holzinger <franz@ttproducts.de>
	* bugfix for PHP 7.x: The method init of tx_transactor_language cannot overload init of tx_div2007_alpha_language_base. init1 must be used instead.
	* add new class PaymentApi for TYPO3 7.x.

2016-05-02	Franz Holzinger <franz@ttproducts.de>
	* Bugfix: TYPO3 does not know any more the $_EXTKEY variable

2016-04-26	Franz Holzinger <franz@ttproducts.de>
	* add support for tt_products 2.12.0 which has a calculatedArray with multiple country specific tax rates
	* add support for TYPO3 7.6.2

2015-08-29	Franz Holzinger <franz@ttproducts.de>
	* bugfix: do not use empty field names for the basket
	* use CSS styled HTML template
	* add a database key to the orderuid field

2015-05-21	Franz Holzinger <franz@ttproducts.de>
	* bugfix: use returnPID even if the payment activity is verify
	* new feature: add a cancelPID

2014-12-06	Franz Holzinger <franz@ttproducts.de>
	* support for backend live search
	* add listener hook

2013-03-21	Franz Holzinger <franz@ttproducts.de>
	* add the file ext_autoload.php
	* add marker functions
	* add support for Ajax based gateway code

2013-01-14	Franz Holzinger <franz@ttproducts.de>
	* changed API: new parameter $bFinalVerify

2012-05-26	Franz Holzinger <franz@ttproducts.de>
	* make amount a double value
	* add markers

2012-01-20	Franz Holzinger <franz@ttproducts.de>
	* Do not overwrite a formerly generated error message
	* support for the new language system of TYPO3 4.6

2011-08-26	Franz Holzinger <franz@ttproducts.de>
	* fix bug: the interface file must be included

2011-08-08	Franz Holzinger <franz@ttproducts.de>
	* move the call to set the detailsArray to the front because some Gateways need the data to make a verification