@@ -1,0 +1,2 @@
+The extension transactor has the purpose to enable online payments connecting to various gateways.
+
