@@ -1,0 +1,61 @@
+{
+  "name": "jambagecom/transactor",
+  "type": "typo3-cms-extension",
+  "description": "This is a basic API to develop extensions which connect to different payment transaction gateways.",
+  "keywords": [
+    "TYPO3",
+    "extension",
+    "payment",
+    "gateway",
+    "tt_products"
+  ],
+  "support": {
+    "issues": "http://jambage.com/kontakt/forum.html"
+  },
+  "homepage": "https://jambage.com",
+  "authors": [
+    {
+      "name": "Franz Holzinger",
+      "role": "Developer",
+      "homepage": "http://ttproducts.de"
+    }
+  ],
+  "license": [
+    "GPL-2.0+"
+  ],
+  "require": {
+    "php": ">=5.3.3,<7.99.99",
+    "typo3/cms-core": ">=6.2.0,<8.99.99",
+    "jambagecom/div2007": ">=1.7.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "JambageCom\\Transactor\\": "Classes"
+    },
+    "classmap": [
+      "interfaces",
+      "Classes",
+      "lib",
+      "model"
+    ]
+  },
+  "replace": {
+    "transactor": "self.version",
+    "typo3-ter/transactor": "self.version"
+  },
+  "config": {
+    "vendor-dir": ".Build/vendor",
+    "bin-dir": ".Build/bin",
+    "preferred-install": {
+      "typo3/cms": "source",
+      "typo3/cms-core": "source",
+      "*": "dist"
+    }
+  },
+  "extra": {
+    "typo3/cms": {
+      "cms-package-dir": "{$vendor-dir}/typo3/cms",
+      "web-dir": ".Build/Web"
+    }
+  }
+}
